# SpaceHarbor

./: .env.cloud.example  .env.example  .env.onprem.example  .gitignore  2026-03-03-123000-we-are-going-to-work-on-assetharbor-project-today.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RELEASE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package.json  setup.sh
.claude/: handoff-assetharbor-phase4-resume.md  handoff-assetharbor-phase4.md  handoff-assetharbor.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  (+1 more)
services/dataengine-functions/ffmpeg-transcoder/: Dockerfile  conftest.py  pyproject.toml
services/dataengine-functions/ffmpeg-transcoder/profiles/: av1_archive.json  dnxhr_hqx.json  dnxhr_sq.json  ffv1_lossless.json  h264_review.json  prores_422_hq.json  prores_4444.json
services/dataengine-functions/ffmpeg-transcoder/src/: function.py  profiles.py  transcoder.py
services/dataengine-functions/ffmpeg-transcoder/tests/: test_function.py  test_profiles.py  test_transcoder.py
services/dataengine-functions/oiio-proxy-generator/: Dockerfile  conftest.py  pyproject.toml
services/dataengine-functions/oiio-proxy-generator/configs/: README.md
services/dataengine-functions/oiio-proxy-generator/src/: exr_inspector.py  function.py  ocio_transform.py  oiio_processor.py  publisher.py
services/dataengine-functions/oiio-proxy-generator/tests/: test_e2e_dev.py  test_exr_inspector.py  test_function.py  test_ocio_transform.py  test_oiio_processor.py  test_publisher.py
services/openassetio-manager/: .env.example  Dockerfile  conftest.py  pyproject.toml
services/openassetio-manager/src/: main.py  resolver.py
services/openassetio-manager/src/routes/: manager.py
services/openassetio-manager/tests/: test_api_key_middleware.py  test_health.py  test_register_browse.py  test_resolve_endpoint.py  test_resolver.py
(+845 files in other folders)
