[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openassetio-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # openassetio>=1.0.0b2 — install manually when wheels are available for your platform
    # See: https://github.com/OpenAssetIO/OpenAssetIO/releases
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
