[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oiio-proxy-generator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # PyOpenColorIO is a system package (not on PyPI).
    # Install via: apt-get install python3-pyopencolorio  (Dockerfile)
    # or: port install opencolorio +python312  (macOS/MacPorts)
    "requests>=2.31.0",
    "confluent-kafka>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
